# quickq-forms

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/__tests__/: fhir_parser.test.ts  fhir_serializer.test.ts  form_store.test.ts  skip_logic.test.ts
frontend/src/__tests__/fixtures/: audit_fhir_questionnaire.json  enable_behavior_all_fhir_questionnaire.json  gout_checkin_fhir_questionnaire.json  phq9_fhir_questionnaire.json  prapare_fhir_questionnaire.json  prenatal_visits_fhir_questionnaire.json  promis10_fhir_questionnaire.json  repeating_with_grid_fhir_questionnaire.json
frontend/src/components/: Form.tsx  Question.tsx  form_context.ts  numbering.ts
frontend/src/components/questions/: Boolean.tsx  DateQuestion.tsx  Grid.tsx  Likert.tsx  MultipleChoice.tsx  Numeric.tsx  Ranked.tsx  RepeatingGroup.tsx  Slider.tsx  (+3 more)
frontend/src/engine/: fhir_parser.ts  fhir_serializer.ts  skip_logic.ts
frontend/src/store/: form_store.ts
frontend/src/types/: fhir.ts  form.ts
quickq_forms/: cli.py  config.py  drafts.py  main.py  models.py  serve.py
quickq_forms/adapters/: __init__.py  base.py  file.py  local.py
scripts/: dev.sh  validate_fhir_fixtures.py
server/: cli.py  main.py  models.py
server/adapters/: base.py  file.py  local.py
tests/: test_fhir_schema.py  test_file_adapter.py  test_local_adapter.py  test_server.py
tests/e2e/: test_pipeline.py  test_render_round_trip.py  test_walkthrough_dev_sh.py
