[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quickq-forms"
version = "0.1.0"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
local = [
    "quickq",
]

[project.scripts]
quickq-forms = "quickq_forms.cli:main"

[tool.setuptools.packages.find]
include = ["quickq_forms*"]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "jsonschema>=4.26.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests that boot real subprocesses and/or hit network (run with -m e2e)",
]
